Finish updating everything to Mongo