@@ -6,57 +6,38 @@ import com.freya02.botcommands.api.components.annotations.JDASelectionMenuListen
 import com.freya02.botcommands.api.components.event.StringSelectionEvent;
 
 import net.dv8tion.jda.api.entities.emoji.Emoji;
-import net.dv8tion.jda.api.interactions.components.ActionRow;
 import net.dv8tion.jda.api.interactions.components.selections.SelectOption;
-
-import net.suuft.libretranslate.Language;
-import net.suuft.libretranslate.Translator;
+import net.dv8tion.jda.api.utils.messages.MessageEditBuilder;
+import net.dv8tion.jda.api.utils.messages.MessageEditData;
 
 import org.jetbrains.annotations.NotNull;
 
-import java.util.EnumMap;
+import space.dynomake.libretranslate.Language;
+import space.dynomake.libretranslate.Translator;
+
+import xyz.srnyx.javautilities.MapGenerator;
+
 import java.util.List;
 import java.util.Map;
 
 
 public class TranslateMenu {
-    @NotNull private static final String SM_TRANSLATE_LANGUAGE = "TranslateContext.translateContext.language";
+    @NotNull private static final String MENU_TRANSLATE_LANGUAGE = "TranslateMenu.translateLanguage";
 
-    @NotNull public static final List<Language> LANGUAGES = List.of(Language.ENGLISH,
-            Language.SPANISH, Language.FRENCH, Language.GERMAN, Language.TURKISH,
-            Language.RUSSIAN, Language.DUTCH, Language.PORTUGUESE, Language.CHINESE,
-            Language.JAPANESE, Language.KOREAN, Language.ITALIAN, Language.ARABIC,
-            Language.POLISH, Language.UKRAINIAN, Language.HINDI, Language.GREEK,
-            Language.IRISH, Language.INDONESIAN, Language.CZECH, Language.SWEDISH,
-            Language.FINNISH, Language.DANISH, Language.HEBREW, Language.PERSIAN);
-    @NotNull private static final Map<Language, Emoji> LANGUAGE_EMOJIS = new EnumMap<>(Language.class);
-    static {
-        LANGUAGE_EMOJIS.put(Language.ENGLISH, Emoji.fromUnicode("🇬🇧"));
-        LANGUAGE_EMOJIS.put(Language.SPANISH, Emoji.fromUnicode("🇪🇸"));
-        LANGUAGE_EMOJIS.put(Language.FRENCH, Emoji.fromUnicode("🇫🇷"));
-        LANGUAGE_EMOJIS.put(Language.GERMAN, Emoji.fromUnicode("🇩🇪"));
-        LANGUAGE_EMOJIS.put(Language.TURKISH, Emoji.fromUnicode("🇹🇷"));
-        LANGUAGE_EMOJIS.put(Language.RUSSIAN, Emoji.fromUnicode("🇷🇺"));
-        LANGUAGE_EMOJIS.put(Language.DUTCH, Emoji.fromUnicode("🇳🇱"));
-        LANGUAGE_EMOJIS.put(Language.PORTUGUESE, Emoji.fromUnicode("🇵🇹"));
-        LANGUAGE_EMOJIS.put(Language.CHINESE, Emoji.fromUnicode("🇨🇳"));
-        LANGUAGE_EMOJIS.put(Language.JAPANESE, Emoji.fromUnicode("🇯🇵"));
-        LANGUAGE_EMOJIS.put(Language.KOREAN, Emoji.fromUnicode("🇰🇷"));
-        LANGUAGE_EMOJIS.put(Language.ITALIAN, Emoji.fromUnicode("🇮🇹"));
-        LANGUAGE_EMOJIS.put(Language.ARABIC, Emoji.fromUnicode("🇸🇦"));
-        LANGUAGE_EMOJIS.put(Language.POLISH, Emoji.fromUnicode("🇵🇱"));
-        LANGUAGE_EMOJIS.put(Language.UKRAINIAN, Emoji.fromUnicode("🇺🇦"));
-        LANGUAGE_EMOJIS.put(Language.HINDI, Emoji.fromUnicode("🇮🇳"));
-        LANGUAGE_EMOJIS.put(Language.GREEK, Emoji.fromUnicode("🇬🇷"));
-        LANGUAGE_EMOJIS.put(Language.IRISH, Emoji.fromUnicode("🇮🇪"));
-        LANGUAGE_EMOJIS.put(Language.INDONESIAN, Emoji.fromUnicode("🇮🇩"));
-        LANGUAGE_EMOJIS.put(Language.CZECH, Emoji.fromUnicode("🇨🇿"));
-        LANGUAGE_EMOJIS.put(Language.SWEDISH, Emoji.fromUnicode("🇸🇪"));
-        LANGUAGE_EMOJIS.put(Language.FINNISH, Emoji.fromUnicode("🇫🇮"));
-        LANGUAGE_EMOJIS.put(Language.DANISH, Emoji.fromUnicode("🇩🇰"));
-        LANGUAGE_EMOJIS.put(Language.HEBREW, Emoji.fromUnicode("🇮🇱"));
-        LANGUAGE_EMOJIS.put(Language.PERSIAN, Emoji.fromUnicode("🇮🇷"));
-    }
+    @NotNull public static final List<Language> LANGUAGES = List.of(
+            Language.ENGLISH, Language.SPANISH, Language.FRENCH, Language.GERMAN, Language.TURKISH,
+            Language.RUSSIAN, Language.DUTCH, Language.PORTUGUESE, Language.CHINESE, Language.JAPANESE,
+            Language.KOREAN, Language.ITALIAN, Language.ARABIC, Language.POLISH, Language.UKRAINIAN,
+            Language.HINDI, Language.GREEK, Language.IRISH, Language.INDONESIAN, Language.CZECH,
+            Language.SWEDISH, Language.FINNISH, Language.DANISH, Language.HEBREW, Language.PERSIAN);
+    @NotNull private static final Map<Language, Emoji> LANGUAGE_EMOJIS = MapGenerator.HASH_MAP.mapOf(
+            LANGUAGES,
+            List.of(Emoji.fromUnicode("🇬🇧"), Emoji.fromUnicode("🇪🇸"), Emoji.fromUnicode("🇫🇷"), Emoji.fromUnicode("🇩🇪"), Emoji.fromUnicode("🇹🇷"),
+                    Emoji.fromUnicode("🇷🇺"), Emoji.fromUnicode("🇳🇱"), Emoji.fromUnicode("🇵🇹"), Emoji.fromUnicode("🇨🇳"), Emoji.fromUnicode("🇯🇵"),
+                    Emoji.fromUnicode("🇰🇷"), Emoji.fromUnicode("🇮🇹"), Emoji.fromUnicode("🇸🇦"), Emoji.fromUnicode("🇵🇱"), Emoji.fromUnicode("🇺🇦"),
+                    Emoji.fromUnicode("🇮🇳"), Emoji.fromUnicode("🇬🇷"), Emoji.fromUnicode("🇮🇪"), Emoji.fromUnicode("🇮🇩"), Emoji.fromUnicode("🇨🇿"),
+                    Emoji.fromUnicode("🇸🇪"), Emoji.fromUnicode("🇫🇮"), Emoji.fromUnicode("🇩🇰"), Emoji.fromUnicode("🇮🇱"), Emoji.fromUnicode("🇮🇷")));
+
     @NotNull private static final List<SelectOption> LANGUAGE_OPTIONS = LANGUAGES.stream()
             .map(language -> {
                 final String name = language.name();
@@ -64,26 +45,25 @@ public class TranslateMenu {
             })
             .toList();
 
-    @JDASelectionMenuListener(name = SM_TRANSLATE_LANGUAGE)
-    public void smTranslateLanguage(@NotNull StringSelectionEvent event,
-                                    @AppOption String message) {
-        event.deferEdit().queue();
-        final TranslateMessage translateMessage = getMessage(message, Language.valueOf(event.getValues().get(0)));
-        event.getHook().editOriginal(translateMessage.message)
-                .setComponents(translateMessage.actionRow)
+    @JDASelectionMenuListener(name = MENU_TRANSLATE_LANGUAGE)
+    public void menuTranslateLanguage(@NotNull StringSelectionEvent event,
+                                      @AppOption String message) {
+        event.deferEdit()
+                .flatMap(hook -> hook.editOriginal(getMessage(message, Language.valueOf(event.getValues().getFirst()))))
                 .queue();
     }
 
     @NotNull
-    public static TranslateMessage getMessage(@NotNull String message, @NotNull Language language) {
+    public static MessageEditData getMessage(@NotNull String message, @NotNull Language language) {
         String translatedMessage = Translator.translate(language, message);
         if (translatedMessage.length() > 2000) translatedMessage = Translator.translate(Language.ENGLISH, language, "*Translation too long!*");
-        return new TranslateMessage(translatedMessage, ActionRow.of(Components.stringSelectionMenu(SM_TRANSLATE_LANGUAGE, message)
-                .oneUse()
-                .setPlaceholder("Select a language")
-                .addOptions(LANGUAGE_OPTIONS)
-                .setDefaultValues(language.name()).build()));
+        return new MessageEditBuilder()
+                .setContent(translatedMessage)
+                .setActionRow(Components.stringSelectionMenu(MENU_TRANSLATE_LANGUAGE, message)
+                        .oneUse()
+                        .setPlaceholder("Select a language")
+                        .addOptions(LANGUAGE_OPTIONS)
+                        .setDefaultValues(language.name()).build())
+                .build();
     }
-
-    public record TranslateMessage(@NotNull String message, @NotNull ActionRow actionRow) {}
 }
